--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  flutter_svg: ^1.0.0
+  flutter_svg: ^1.0.0 # For SVG
+  slide_to_act: ^2.0.2 # For Welcome Page slide button
   cupertino_icons: ^1.0.2
   firebase_core: ^2.27.0
   firebase_database: ^10.4.9
