--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_svg: ^1.0.0 # For SVG
   slide_to_act: ^2.0.2 # For Welcome Page slide button
+  get: ^4.6.6 # For State Management and Page routing
   cupertino_icons: ^1.0.2
   firebase_core: ^2.27.0
   firebase_database: ^10.4.9
