--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.27.0
   firebase_database: ^10.4.9
+  firebase_auth: ^4.17.8
 
 dev_dependencies:
   flutter_test:
