--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "guides.normal.color.light": "#d0d0d0", // Màu của các đường dọc khi dùng theme sáng
   "guides.normal.style": "solid", // Kiểu đường dọc (solid/dashed/dotted)
   "guides.extraGuides": [80, 100] // Các vị trí thêm đường dọc
-    }
+    },
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
