--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^4.15.8
   image_picker: ^1.1.2
   firebase_storage: ^11.7.7
+  firebase_app_check: ^0.2.2+7
 
 dev_dependencies:
   flutter_test:
